stack/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: single-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: monitoring-virtualservice
spec:
  hosts:
  - "*" 
  gateways:
  - single-gateway
  http:
  - match:
    - uri:
        prefix: "/grafana"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: monitoring-grafana.monitoring.svc.cluster.local
        port:
          number: 80
